[package]
name = "maelstrom-fuse"
description = "FUSE filesystems for use with Maelstrom"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
derive_more.workspace = true
fuser.workspace = true
futures.workspace = true
maelstrom-base.workspace = true
maelstrom-linux.workspace = true
maelstrom-util.workspace = true
serde_repr.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [ "io-std", "sync" ] }

[dev-dependencies]
clap.workspace = true
tempfile.workspace = true
