[package]
name = "maelstrom-fuse"
description = "Library for interacting with FUSE with async Rust"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
anyhow_trace.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
libc.workspace = true
maelstrom-base.workspace = true
maelstrom-linux = { workspace = true, features = ["std"] }
maelstrom-util.workspace = true
memchr.workspace = true
page_size.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog.workspace = true
smallvec.workspace = true
tokio = { workspace = true, features = [ "net", "io-std" ] }
tokio-tar.workspace = true
zerocopy.workspace = true

[dev-dependencies]
tempfile.workspace = true
