[package]
name = "maelstrom-github"
description = "Client code for communicating with GitHub APIs."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
azure_core.workspace = true
azure_storage_blobs.workspace = true
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio-util.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
sha2.workspace = true
maelstrom-base.workspace = true
