[package]
name = "maelstrom-layer-fs"
description = "FUSE filesystem for use with Maelstrom"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
anyhow_trace.workspace = true
async-trait.workspace = true
derive_more.workspace = true
fuser.workspace = true
futures.workspace = true
maelstrom-base.workspace = true
maelstrom-fuse.workspace = true
maelstrom-linux.workspace = true
maelstrom-util.workspace = true
serde.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog.workspace = true
tokio = { workspace = true, features = [ "io-std", "sync" ] }
tokio-tar = { workspace = true }

[dev-dependencies]
clap.workspace = true
tempfile.workspace = true

[[bin]]
name = "layer-fs-cli"
path = "src/layer_fs_cli.rs"
