[package]
name = "maelstrom-linux"
description = "Function wrappers of Linux syscalls used by Maelstrom."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
derive_more.workspace = true
libc = "0.2"
nix = { version = "0.26.2", features = ["signal"] }

[features]
std = []
test = []
