[package]
name = "maelstrom-pytest"
categories = ["command-line-utilities", "development-tools::testing", "virtualization"]
description = "Python Test Runner for Maelstrom."
keywords = ["python", "cluster", "containers", "subcommand", "test-runner"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
combine.workspace = true
console.workspace = true
derive_more.workspace = true
globset.workspace = true
indicatif.workspace = true
maelstrom-base.workspace = true
maelstrom-client.workspace = true
maelstrom-container.workspace = true
maelstrom-macro.workspace = true
maelstrom-test-runner.workspace = true
maelstrom-util.workspace = true
regex.workspace = true
regex-macro.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
strum.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
enum-map.workspace = true
indoc.workspace = true
maelstrom-broker.workspace = true
maelstrom-test.workspace = true
maelstrom-worker.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
tempfile.workspace = true

[[bin]]
name = "pytest-client-bg-proc"
path = "src/bg_proc_main.rs"
