[package]
name = "maelstrom-run"
categories = ["command-line-utilities", "development-tools::testing", "virtualization"]
description = "Program for submitting jobs to Maelstrom clusters."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
enumset.workspace = true
indicatif.workspace = true
maelstrom-base.workspace = true
maelstrom-client.workspace = true
maelstrom-config.workspace = true
maelstrom-util.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
maelstrom-test.workspace = true
