[package]
name = "maelstrom-run"
categories = ["command-line-utilities", "development-tools::testing", "virtualization"]
description = "Program for submitting jobs to Maelstrom clusters."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ascii.workspace = true
clap.workspace = true
crossterm.workspace = true
derive_more.workspace = true
enumset.workspace = true
indicatif.workspace = true
indoc.workspace = true
maelstrom-base.workspace = true
maelstrom-client.workspace = true
maelstrom-linux.workspace = true
maelstrom-macro.workspace = true
maelstrom-util.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
slog.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
maplit.workspace = true
maelstrom-client-base.workspace = true
maelstrom-test.workspace = true
