[package]
name = "maelstrom-simex"
description = "SIMulation EXplorer: utility to exhaustively test code using simulations"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num.workspace = true
