[package]
name = "maelstrom-simex"
categories = ["simulation", "development-tools::testing"]
description = "SIMulation EXplorer: a test utility for exhaustively exploring all possible simulations in a simulation space."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num.workspace = true
