[package]
name = "maelstrom-test-runner"
description = "Library used by Maelstrom binaries to implement a test runner"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
clap.workspace = true
colored.workspace = true
combine.workspace = true
console.workspace = true
crossterm.workspace = true
derive_more.workspace = true
enumset.workspace = true
globset.workspace = true
indicatif.workspace = true
maelstrom-base.workspace = true
maelstrom-client.workspace = true
maelstrom-container.workspace = true
maelstrom-linux.workspace = true
maelstrom-macro.workspace = true
maelstrom-util.workspace = true
notify.workspace = true
num-derive.workspace = true
num-traits.workspace = true
ratatui.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog.workspace = true
std-semaphore.workspace = true
strum.workspace = true
tui-term.workspace = true
toml.workspace = true
unicode-truncate.workspace = true
unicode-width.workspace = true
vt100.workspace = true
xdg.workspace = true

[dev-dependencies]
colored-diff.workspace = true
enum-map.workspace = true
indoc.workspace = true
itertools.workspace = true
maelstrom-simex.workspace = true
maelstrom-test.workspace = true
maplit.workspace = true
paste.workspace = true
pretty_assertions.workspace = true
serde.workspace = true
slog-json.workspace = true
tempfile.workspace = true
