[package]
name = "maelstrom-test"
description = "Test macros for Maelstrom."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
maelstrom-base.workspace = true
maelstrom-util.workspace = true
serde.workspace = true
