[package]
name = "maelstrom-util"
description = "Utilities for use by non-WASM Maelstrom libraries and binaries."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
async-walkdir.workspace = true
byteorder.workspace = true
bytesize.workspace = true
clap.workspace = true
derive_more.workspace = true
fs2.workspace = true
futures-lite.workspace = true
futures.workspace = true
globset.workspace = true
maelstrom-base.workspace = true
serde.workspace = true
sha2.workspace = true
slog.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["sync"] }
walkdir.workspace = true

[dev-dependencies]
concat-idents.workspace = true
rand.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }

[[bin]]
name = "manifest-cli"
path = "src/manifest_cli.rs"
