[package]
name = "maelstrom-util"
description = "Utilities for use by non-WASM Maelstrom libraries and binaries."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
async-trait.workspace = true
async-walkdir.workspace = true
byteorder.workspace = true
bytesize.workspace = true
bytesize-serde.workspace = true
clap.workspace = true
derive_more.workspace = true
fs2.workspace = true
futures-lite.workspace = true
futures.workspace = true
globset.workspace = true
heck.workspace = true
indoc.workspace = true
lddtree.workspace = true
lru.workspace = true
maelstrom-base.workspace = true
maelstrom-linux = { workspace = true, features = ["std"] }
num_cpus.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_with.workspace = true
sha2.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["sync"] }
toml.workspace = true
walkdir.workspace = true
xdg.workspace = true

[dev-dependencies]
concat-idents.workspace = true
maelstrom-simex.workspace = true
rand.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread", "time"] }

[[bin]]
name = "manifest-cli"
path = "src/manifest_cli.rs"
