[package]
name = "maelstrom-util"
description = "Utilities for use by non-WASM Maelstrom libraries and binaries."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anstyle.workspace = true
anyhow.workspace = true
async-trait.workspace = true
async-walkdir.workspace = true
byteorder.workspace = true
bytesize.workspace = true
bytesize-serde.workspace = true
clap.workspace = true
countio.workspace = true
derive_more.workspace = true
fs2.workspace = true
futures-lite.workspace = true
futures.workspace = true
globset.workspace = true
heck.workspace = true
itertools.workspace = true
lddtree.workspace = true
lru.workspace = true
maelstrom-base.workspace = true
maelstrom-linux = { workspace = true, features = ["std"] }
maelstrom-macro.workspace = true
num_cpus.workspace = true
pin-project.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
sha2.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog.workspace = true
strum.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
walkdir.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
concat-idents.workspace = true
indoc.workspace = true
maelstrom-simex.workspace = true
maelstrom-test.workspace = true
serde_test.workspace = true

[[bin]]
name = "manifest-cli"
path = "src/manifest_cli.rs"
