[package]
name = "maelstrom-web"
description = "Maelstrom WASM web client"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
console_error_panic_hook.workspace = true
eframe.workspace = true
egui.workspace = true
egui_gauge.workspace = true
egui-toast.workspace = true
maelstrom-plot.workspace = true
futures.workspace = true
gloo-net.workspace = true
gloo-utils.workspace = true
maelstrom-base.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
wasm-logger.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Location",
  "WebSocket",
  "Window",
]
