[package]
name = "maelstrom-web"
description = "Maelstrom WASM web client."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
web-ui = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
anyhow.workspace = true
console_error_panic_hook.workspace = true
eframe.workspace = true
egui.workspace = true
egui_gauge.workspace = true
egui-toast.workspace = true
maelstrom-plot.workspace = true
futures.workspace = true
gloo-net.workspace = true
gloo-utils.workspace = true
maelstrom-base.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
wasm-logger.workspace = true
web-sys.workspace = true

[build-dependencies]
tar.workspace = true
wasm-bindgen-cli-support.workspace = true
cargo_metadata.workspace = true
# These dependencies ensure the build script re-runs
maelstrom-plot.workspace = true
maelstrom-base.workspace = true
