[package]
name = "maelstrom-worker-child"
description = "No_std worker code that is run in the child process"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
nc.workspace = true
