[package]
name = "maelstrom-worker-child"
description = "Helper library for maelstrom-worker."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
maelstrom-linux.workspace = true
