[package]
name = "maelstrom-worker"
categories = ["development-tools::testing", "virtualization"]
description = "The maelstrom worker. This process executes jobs as directed by the broker."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bumpalo.workspace = true
bytesize.workspace = true
bytesize-serde.workspace = true
clap.workspace = true
derive_more.workspace = true
futures.workspace = true
gethostname.workspace = true
lru.workspace = true
maelstrom-base.workspace = true
maelstrom-fuse.workspace = true
maelstrom-layer-fs.workspace = true
maelstrom-linux = { workspace = true, features = ["std"] }
maelstrom-macro.workspace = true
maelstrom-util.workspace = true
maelstrom-worker-child.workspace = true
netlink-packet-core.workspace = true
netlink-packet-route.workspace = true
num_cpus.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
slog-async.workspace = true
slog-term.workspace = true
slog.workspace = true
strum.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
anyhow.workspace = true
colored-diff.workspace = true
itertools.workspace = true
maplit.workspace = true
maelstrom-linux = { workspace = true, features = ["std", "test"] }
maelstrom-test.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
