[package]
name = "maelstrom-worker"
categories = ["development-tools::testing", "virtualization"]
description = "The maelstrom worker. This process executes jobs as directed by the broker."
keywords = ["cluster", "containers"]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bumpalo.workspace = true
bytesize.workspace = true
bytesize-serde.workspace = true
clap.workspace = true
derive_more.workspace = true
futures.workspace = true
lru.workspace = true
maelstrom-base.workspace = true
maelstrom-fuse.workspace = true
maelstrom-layer-fs.workspace = true
maelstrom-linux = { workspace = true, features = ["std", "tokio"] }
maelstrom-macro.workspace = true
maelstrom-util.workspace = true
maelstrom-worker-child.workspace = true
netlink-packet-core.workspace = true
netlink-packet-route.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
slog.workspace = true
socket2.workspace = true
std-semaphore.workspace = true
strum.workspace = true
tempfile.workspace = true
tokio.workspace = true
xdg.workspace = true

[dev-dependencies]
assert_matches.workspace = true
anyhow.workspace = true
bytes.workspace = true
colored-diff.workspace = true
indoc.workspace = true
itertools.workspace = true
maplit.workspace = true
maelstrom-linux = { workspace = true, features = ["std", "test"] }
maelstrom-test.workspace = true
pathdiff.workspace = true
tokio.workspace = true
