[package]
name = "meticulous"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "^0.3"
hyper = { version = "^0.14", features = ["http1", "server", "tcp"] }
hyper-tungstenite = "^0.11"
meticulous-ui = { version = "^0.1", path = "../meticulous-ui" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.71"
itertools = "0.10.5"
nix = { version = "0.26.2", features = ["signal"] }
tar = "0.4.38"
tempfile = "3.5.0"
rand = "0.8.5"
regex = "1.8.3"
