[package]
name = "meticulous-base"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more.workspace = true
enum-map.workspace = true
enumset.workspace = true
hex.workspace = true
nonempty.workspace = true
serde.workspace = true
strum.workspace = true

[dev-dependencies]
serde_test.workspace = true
