[package]
name = "meticulous-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
hyper-tungstenite = { workspace = true }
hyper = { workspace = true }
meticulous-base = { workspace = true }
meticulous-util = { workspace = true }
serde = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"

[dev-dependencies]
itertools = { workspace = true }
meticulous-test = { workspace = true }
