[package]
name = "meticulous-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
hyper-tungstenite = { workspace = true }
hyper = { workspace = true }
meticulous-base = { workspace = true }
meticulous-util = { workspace = true }
serde = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
slog = { workspace = true }
slog-term = { workspace = true }
slog-async = { workspace = true }
bytesize = { workspace = true }

[dev-dependencies]
enum-map = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
meticulous-test = { workspace = true }
