[package]
name = "meticulous-broker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
derive_more.workspace = true
figment.workspace = true
futures.workspace = true
hyper-tungstenite.workspace = true
hyper.workspace = true
meticulous-base.workspace = true
maelstrom-util.workspace = true
serde.workspace = true
serde_with.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
bytesize.workspace = true

[dev-dependencies]
enum-map.workspace = true
itertools.workspace = true
maplit.workspace = true
maelstrom-test.workspace = true
